# post_slug

./: .bash_completion  .gitcommit  .gitignore  .symlink  AUDIT-BASH.md  AUDIT-EVALUATE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  _version.py  post_slug.bash  post_slug.js  post_slug.php  post_slug.py  pyproject.toml  rename-files-to-slug  slug-files  slugify  slugify-files  update_version.sh
docs/: PURPOSE-FUNCTIONALITY-USAGE.md
unittests/: README.md  _post_slug.bash  _post_slug.js  _post_slug.php  _post_slug.py  post_slug.js  ps-test01.bash  test_post_slug.py  validate_all_post_slug_scripts  validate_slug_scripts
unittests/datasets/: booktitles.txt  edge_cases.txt  products.txt
