[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "post_slug"
authors = [{name = "Gary Dean", email = "garydean@okusi.id"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/Open-Technology-Foundation/post_slug"
